kubedefs/appdeploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpro-app-dep
  labels:
    app: vpro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpro-app
  template:
    metadata:
      labels:
        app: vpro-app
    spec:
      containers:
      - name: vpro-app
        image: haarish1999/vproapp:latest
        ports:
        - containerPort: 8080
          name: vpro-app-port
