kubedefs/rmqdeploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpro-rmq-dep
  labels:
    app: vpro-rmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpro-rmq
  template:
    metadata:
      labels:
        app: vpro-rmq
    spec:
      containers:
      - name: vpro-rmq
        image: rabbitmq
        ports:
        - containerPort: 5672
          name: vpro-rmq-port
