kubedefs/appservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vpro-app-svc
spec:
  selector:
    app: vpro-app
  ports:
  - port: 8080
    targetPort: vpro-app-port
    protocol: TCP
  type: ClusterIP
