kubedefs/mcservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  labels:
    app: vprofile-mc
spec:
  selector:
    app: vprofile-mc
  ports:
  - port: 11211
    targetPort: vprofile-mc-port
    protocol: TCP
  type: ClusterIP
