kubedefs/rmqservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
  labels:
    app: vprofile-rmq
spec:
  selector:
    app: vprofile-rmq
  ports:
  - port: 5672
    targetPort: vprofile-rmq-port
    protocol: TCP
  type: ClusterIP
