kubedefs/appingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-myingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.bekkyinfo.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vpro-app-svc
            port: 
              number: 8080
